增加了主城等级排序

--- a/Data/config.json
+++ b/Data/config.json
@@ -1,1 +1,1 @@
-{"read_path": "C:/Users/Administrator/Downloads/20191022_055108_05126_ihzs3.csv", "save_path": "F:/HeroSoft/Resoult", "tga_url": "http://thinkgame2.shandw.com:8993"}
+{"read_path": "C:/Users/Administrator/Downloads/20191213_114526_14192_tff56.csv", "save_path": "F:/", "tga_url": "http://thinkgame2.shandw.com:8993"}
